--- a/files/2_tp_semestre1/3_module.ipynb
+++ b/files/2_tp_semestre1/3_module.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-23T20:20:46.267067Z",
-     "iopub.status.busy": "2021-11-23T20:20:46.266578Z",
-     "iopub.status.idle": "2021-11-23T20:20:46.273676Z",
-     "shell.execute_reply": "2021-11-23T20:20:46.273200Z"
+     "iopub.execute_input": "2021-11-23T20:28:49.261734Z",
+     "iopub.status.busy": "2021-11-23T20:28:49.261227Z",
+     "iopub.status.idle": "2021-11-23T20:28:49.265523Z",
+     "shell.execute_reply": "2021-11-23T20:28:49.263266Z"
     }
    },
    "outputs": [],
@@ -39,10 +39,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-23T20:20:46.281694Z",
-     "iopub.status.busy": "2021-11-23T20:20:46.281051Z",
-     "iopub.status.idle": "2021-11-23T20:20:46.284583Z",
-     "shell.execute_reply": "2021-11-23T20:20:46.284922Z"
+     "iopub.execute_input": "2021-11-23T20:28:49.274226Z",
+     "iopub.status.busy": "2021-11-23T20:28:49.273732Z",
+     "iopub.status.idle": "2021-11-23T20:28:49.277392Z",
+     "shell.execute_reply": "2021-11-23T20:28:49.277753Z"
     }
    },
    "outputs": [
@@ -84,10 +84,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-23T20:20:46.288757Z",
-     "iopub.status.busy": "2021-11-23T20:20:46.288272Z",
-     "iopub.status.idle": "2021-11-23T20:20:46.327369Z",
-     "shell.execute_reply": "2021-11-23T20:20:46.327797Z"
+     "iopub.execute_input": "2021-11-23T20:28:49.281715Z",
+     "iopub.status.busy": "2021-11-23T20:28:49.281197Z",
+     "iopub.status.idle": "2021-11-23T20:28:49.325792Z",
+     "shell.execute_reply": "2021-11-23T20:28:49.325402Z"
     }
    },
    "outputs": [
@@ -98,7 +98,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_158/2158743488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mintegrate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# la fonction qu'on va intégrer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_160/2158743488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mintegrate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# la fonction qu'on va intégrer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
      ]
     }
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-23T20:20:46.331542Z",
-     "iopub.status.busy": "2021-11-23T20:20:46.331041Z",
-     "iopub.status.idle": "2021-11-23T20:20:46.335892Z",
-     "shell.execute_reply": "2021-11-23T20:20:46.335525Z"
+     "iopub.execute_input": "2021-11-23T20:28:49.331002Z",
+     "iopub.status.busy": "2021-11-23T20:28:49.330552Z",
+     "iopub.status.idle": "2021-11-23T20:28:49.333297Z",
+     "shell.execute_reply": "2021-11-23T20:28:49.332918Z"
     }
    },
    "outputs": [
@@ -159,7 +159,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_158/2521968441.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgaussienne\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgaussienne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# renvoie moyenne et variance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_160/2521968441.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgaussienne\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgaussienne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# renvoie moyenne et variance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
      ]
     }
@@ -180,7 +180,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Réécrire des fonctions `moyenne` et `variance` pour calculer la moyenne et la variance d'une liste de nombres."
    ]
@@ -208,10 +212,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "### Manipulations simples\n",
-    "\n",
+    "### Manipulations simples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
     "1. `expand` permet de développer une expression. Essayer avec `expand((x+y)**5)`.  \n",
     "2. `expand` permet aussi de développer une expression trigonométrique en utilisant l'option `trig = True`. Essayer avec `expand(cos(2*x), trig = True)` et vérifier la réponse mathématiquement (les fonctions classiques `cos`, `sin`, `tan`, `ln`, `exp`... sont définies dans `sympy`).  \n",
     "3. Retrouver aussi les formules pour $\\cos(x+y)$ et $\\sin(x+y)$.\n",
@@ -223,7 +238,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Limites, dérivées\n",
+    "### Limites, dérivées"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
     "1. `limit` permet de calculer une limite. Par exemple, `limit(sin(x)/x, x, 0)` calcule $\\lim_{x\\longrightarrow0} \\frac{\\sin(x)}{x}$. Essayer et vérifier le résultat mathématiquement.  \n",
     "2. Calculer $\\lim_{x\\longrightarrow0} x^x$ mathématiquement et vérifier avec Python.  \n",
     "3. $\\infty$ est représenté par `oo` avec `sympy`. Calculer $\\lim_{x\\longrightarrow\\infty} \\frac{x}{\\ln(x)}$ avec Python.  \n",
@@ -240,7 +265,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Résolution d'équations\n",
+    "### Résolution d'équations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
     "1. On peut résoudre une équation du type $f(x) = 0$ en écrivant `solve(f(x), x)`, qui renvoie la liste des solutions. Par exemple, on peut écrire `solve(x**2 - x - 1, x)` pour résoudre $x^2 - x - 1 = 0$. Essayer et retrouver le résultat mathématiquement.  \n",
     "2. On peut aussi résoudre des systèmes d'équations linéaires à plusieurs inconnues. Par exemple, \\\\`solve([x + 5*y - 2, -3*x + 6*y - 15], [x, y])` permet de résoudre le système:\n",
     "$$x + 5y - 2 = 0$$\n",
@@ -253,9 +288,20 @@
    "metadata": {},
    "source": [
     "### Séries\n",
-    "1. `series` permet de trouver le developpement limité d'une fonction. Par exemple, `series(cos(x), x, 0, 8)` donne le développement limité en 0 de $\\cos$, à l'ordre 8.  \n",
-    "2. Retrouver les développements limités en 0 usuels: $\\ln(1+x)$, $\\sqrt{1+x}$, $\\tan(x)$...\n",
-    "3. `apart` permet de développer une fraction en éléments simples. Essayer `apart(1/(x*(x+1)))` et vérifier le résultat."
+    "\n",
+    "`series` permet de trouver le developpement limité d'une fonction. Par exemple, `series(cos(x), x, 0, 8)` donne le développement limité en 0 de $\\cos$, à l'ordre 8. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "1. Retrouver les développements limités en 0 usuels: $\\ln(1+x)$, $\\sqrt{1+x}$, $\\tan(x)$...\n",
+    "2. `apart` permet de développer une fraction en éléments simples. Essayer `apart(1/(x*(x+1)))` et vérifier le résultat."
    ]
   }
  ],
