--- a/files/2_tp_semestre1/3_module.ipynb
+++ b/files/2_tp_semestre1/3_module.ipynb
@@ -186,7 +186,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Réécrire des fonctions `moyenne` et `variance` pour calculer la moyenne et la variance d'une liste de nombres."
+    "**Exercice** : Réécrire des fonctions `moyenne` et `variance` (comme dans le DS, sans utiliser scipy) pour calculer la moyenne et la variance d'une liste de nombres."
    ]
   },
   {
