--- a/files/2_tp_semestre1/3_module.ipynb
+++ b/files/2_tp_semestre1/3_module.ipynb
@@ -206,7 +206,7 @@
     ]
    },
    "source": [
-    "1. Importer `sympy`.\n",
+    "1. Importer `sympy` avec `from sympy import *`.\n",
     "2. Écrire `from sympy.abc import x, y`. Ceci permet ensuite d'utiliser `x` et `y` comme variables indéterminées."
    ]
   },
