--- a/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
+++ b/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
@@ -5,7 +5,7 @@
    "id": "f63a5329-194c-40f2-9655-97e6da30d4ce",
    "metadata": {},
    "source": [
-    "# [Boucles imbriquées ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F2_boucles_imbriquees.ipynb%26branch%3Dmaster)\n",
+    "# [TP 2 : Boucles imbriquées ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F2_boucles_imbriquees.ipynb%26branch%3Dmaster)\n",
     "\n",
     "Dans ce TP, on considère des algorithmes utilisant des boucles imbriquées (les unes dans les autres). Par exemple, dans le code suivant, `print(i, j)` est exécuté pour tous les `i` entre $0$ et $3$ et tous les `j` entre $0$ et $2$ :"
    ]
@@ -16,10 +16,10 @@
    "id": "a2a2cee2-6ffa-44fb-a716-10bad9912836",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-21T19:17:44.533631Z",
-     "iopub.status.busy": "2021-11-21T19:17:44.532661Z",
-     "iopub.status.idle": "2021-11-21T19:17:44.544238Z",
-     "shell.execute_reply": "2021-11-21T19:17:44.543781Z"
+     "iopub.execute_input": "2021-12-06T15:37:30.437000Z",
+     "iopub.status.busy": "2021-12-06T15:37:30.436367Z",
+     "iopub.status.idle": "2021-12-06T15:37:30.451649Z",
+     "shell.execute_reply": "2021-12-06T15:37:30.452596Z"
     }
    },
    "outputs": [
@@ -71,10 +71,10 @@
    "id": "f11a6436-dc54-4f51-b7f1-0a84b8959aee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-21T19:17:44.548045Z",
-     "iopub.status.busy": "2021-11-21T19:17:44.547649Z",
-     "iopub.status.idle": "2021-11-21T19:17:44.551391Z",
-     "shell.execute_reply": "2021-11-21T19:17:44.551055Z"
+     "iopub.execute_input": "2021-12-06T15:37:30.458908Z",
+     "iopub.status.busy": "2021-12-06T15:37:30.457960Z",
+     "iopub.status.idle": "2021-12-06T15:37:30.461040Z",
+     "shell.execute_reply": "2021-12-06T15:37:30.461841Z"
     },
     "tags": [
      "cor"
@@ -116,10 +116,10 @@
    "id": "b2a9c312-70a9-46bd-91c3-6110ff681240",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-21T19:17:44.554545Z",
-     "iopub.status.busy": "2021-11-21T19:17:44.554137Z",
-     "iopub.status.idle": "2021-11-21T19:17:44.556636Z",
-     "shell.execute_reply": "2021-11-21T19:17:44.556907Z"
+     "iopub.execute_input": "2021-12-06T15:37:30.466937Z",
+     "iopub.status.busy": "2021-12-06T15:37:30.466299Z",
+     "iopub.status.idle": "2021-12-06T15:37:30.471402Z",
+     "shell.execute_reply": "2021-12-06T15:37:30.470828Z"
     }
    },
    "outputs": [
@@ -144,10 +144,10 @@
    "id": "3c72b6ff-e6d3-475f-9dac-a8c3910cb8d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-21T19:17:44.559823Z",
-     "iopub.status.busy": "2021-11-21T19:17:44.558515Z",
-     "iopub.status.idle": "2021-11-21T19:17:44.599436Z",
-     "shell.execute_reply": "2021-11-21T19:17:44.598995Z"
+     "iopub.execute_input": "2021-12-06T15:37:30.476677Z",
+     "iopub.status.busy": "2021-12-06T15:37:30.475891Z",
+     "iopub.status.idle": "2021-12-06T15:37:30.535642Z",
+     "shell.execute_reply": "2021-12-06T15:37:30.536168Z"
     }
    },
    "outputs": [
@@ -158,7 +158,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_158/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_184/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -186,10 +186,10 @@
    "id": "487e7d00-95fd-4eec-beeb-a26c83b9bcfb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-21T19:17:44.603386Z",
-     "iopub.status.busy": "2021-11-21T19:17:44.603046Z",
-     "iopub.status.idle": "2021-11-21T19:17:44.606576Z",
-     "shell.execute_reply": "2021-11-21T19:17:44.606208Z"
+     "iopub.execute_input": "2021-12-06T15:37:30.542605Z",
+     "iopub.status.busy": "2021-12-06T15:37:30.541041Z",
+     "iopub.status.idle": "2021-12-06T15:37:30.543278Z",
+     "shell.execute_reply": "2021-12-06T15:37:30.543786Z"
     },
     "tags": [
      "cor"
@@ -234,10 +234,10 @@
    "id": "5e25690a-df9c-4f30-95a9-cc3ef84b7124",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-21T19:17:44.612018Z",
-     "iopub.status.busy": "2021-11-21T19:17:44.611281Z",
-     "iopub.status.idle": "2021-11-21T19:17:44.614631Z",
-     "shell.execute_reply": "2021-11-21T19:17:44.614309Z"
+     "iopub.execute_input": "2021-12-06T15:37:30.551675Z",
+     "iopub.status.busy": "2021-12-06T15:37:30.550135Z",
+     "iopub.status.idle": "2021-12-06T15:37:30.552427Z",
+     "shell.execute_reply": "2021-12-06T15:37:30.552904Z"
     },
     "tags": [
      "cor"
@@ -303,10 +303,10 @@
    "id": "2cd6bbf2-20ff-4ced-aba9-47d84dd21531",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-21T19:17:44.623279Z",
-     "iopub.status.busy": "2021-11-21T19:17:44.622928Z",
-     "iopub.status.idle": "2021-11-21T19:17:44.627732Z",
-     "shell.execute_reply": "2021-11-21T19:17:44.627117Z"
+     "iopub.execute_input": "2021-12-06T15:37:30.566570Z",
+     "iopub.status.busy": "2021-12-06T15:37:30.560763Z",
+     "iopub.status.idle": "2021-12-06T15:37:30.569024Z",
+     "shell.execute_reply": "2021-12-06T15:37:30.569538Z"
     },
     "tags": [
      "cor"
@@ -373,10 +373,10 @@
    "id": "31c52c29-8a92-4db2-8d17-7cd87780eabb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-21T19:17:44.632402Z",
-     "iopub.status.busy": "2021-11-21T19:17:44.632055Z",
-     "iopub.status.idle": "2021-11-21T19:17:44.636405Z",
-     "shell.execute_reply": "2021-11-21T19:17:44.636087Z"
+     "iopub.execute_input": "2021-12-06T15:37:30.579795Z",
+     "iopub.status.busy": "2021-12-06T15:37:30.578725Z",
+     "iopub.status.idle": "2021-12-06T15:37:30.581671Z",
+     "shell.execute_reply": "2021-12-06T15:37:30.582166Z"
     },
     "tags": [
      "cor"
