--- a/files/2_tp_semestre1/1_dictionnaire.ipynb
+++ b/files/2_tp_semestre1/1_dictionnaire.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Dictionnaire et recherche séquentielle ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
+    "# [TP 1 : Dictionnaire et recherche séquentielle ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
     "\n",
     "## Recherche séquentielle dans une liste"
    ]
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.017237Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.013615Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.030651Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.029937Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.764610Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.763948Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.792086Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.792762Z"
     },
     "tags": [
      "cor"
@@ -100,10 +100,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.035598Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.035052Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.038673Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.038193Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.799703Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.797904Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.800730Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.801289Z"
     }
    },
    "outputs": [],
@@ -123,10 +123,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.044389Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.043773Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.046612Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.047089Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.811312Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.810221Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.813381Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.813887Z"
     }
    },
    "outputs": [
@@ -157,10 +157,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.052099Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.049503Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.055160Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.054402Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.819528Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.817851Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.820293Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.820768Z"
     }
    },
    "outputs": [],
@@ -180,10 +180,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.059368Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.058801Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.062095Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.061589Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.829611Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.828888Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.832300Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.832826Z"
     }
    },
    "outputs": [
@@ -214,10 +214,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.067704Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.066922Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.069788Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.070244Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.838174Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.837558Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.840660Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.841129Z"
     }
    },
    "outputs": [
@@ -248,10 +248,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.074610Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.074026Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.077056Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.076594Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.847738Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.846379Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.849767Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.849216Z"
     }
    },
    "outputs": [
@@ -282,10 +282,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.081063Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.080357Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.083156Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.082633Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.855931Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.854186Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.856597Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.857065Z"
     }
    },
    "outputs": [],
@@ -312,10 +312,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.089490Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.088896Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.092916Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.092444Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.863560Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.861368Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.866893Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.867725Z"
     },
     "tags": [
      "cor"
@@ -376,10 +376,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:47.102849Z",
-     "iopub.status.busy": "2021-11-16T19:36:47.100730Z",
-     "iopub.status.idle": "2021-11-16T19:36:47.106011Z",
-     "shell.execute_reply": "2021-11-16T19:36:47.104752Z"
+     "iopub.execute_input": "2021-12-06T15:37:25.875429Z",
+     "iopub.status.busy": "2021-12-06T15:37:25.874808Z",
+     "iopub.status.idle": "2021-12-06T15:37:25.880895Z",
+     "shell.execute_reply": "2021-12-06T15:37:25.881356Z"
     },
     "tags": [
      "cor"
