--- a/files/2_tp_semestre1/3_module.ipynb
+++ b/files/2_tp_semestre1/3_module.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Modules et packages en Python ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F3_module.ipynb%26branch%3Dmaster)\n",
+    "# [TP 3 : Modules et packages en Python ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F3_module.ipynb%26branch%3Dmaster)\n",
     "\n",
     "Un module est un fichier Python qui contient des définitions de fonctions et variables, réunies autour d'un même thème. Un package réunit plusieurs modules.  \n",
     "Une des forces de Python et son grand nombre de modules disponibles, et notamment dans les domaines scientifiques.  \n",
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-23T20:35:27.416235Z",
-     "iopub.status.busy": "2021-11-23T20:35:27.415602Z",
-     "iopub.status.idle": "2021-11-23T20:35:27.425467Z",
-     "shell.execute_reply": "2021-11-23T20:35:27.424909Z"
+     "iopub.execute_input": "2021-12-06T15:37:33.117249Z",
+     "iopub.status.busy": "2021-12-06T15:37:33.116609Z",
+     "iopub.status.idle": "2021-12-06T15:37:33.122037Z",
+     "shell.execute_reply": "2021-12-06T15:37:33.121448Z"
     }
    },
    "outputs": [],
@@ -39,10 +39,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-23T20:35:27.435546Z",
-     "iopub.status.busy": "2021-11-23T20:35:27.434978Z",
-     "iopub.status.idle": "2021-11-23T20:35:27.438563Z",
-     "shell.execute_reply": "2021-11-23T20:35:27.439029Z"
+     "iopub.execute_input": "2021-12-06T15:37:33.137317Z",
+     "iopub.status.busy": "2021-12-06T15:37:33.131888Z",
+     "iopub.status.idle": "2021-12-06T15:37:33.147827Z",
+     "shell.execute_reply": "2021-12-06T15:37:33.148380Z"
     }
    },
    "outputs": [
@@ -84,10 +84,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-23T20:35:27.443573Z",
-     "iopub.status.busy": "2021-11-23T20:35:27.441447Z",
-     "iopub.status.idle": "2021-11-23T20:35:27.496337Z",
-     "shell.execute_reply": "2021-11-23T20:35:27.495830Z"
+     "iopub.execute_input": "2021-12-06T15:37:33.153375Z",
+     "iopub.status.busy": "2021-12-06T15:37:33.151955Z",
+     "iopub.status.idle": "2021-12-06T15:37:33.208558Z",
+     "shell.execute_reply": "2021-12-06T15:37:33.209068Z"
     }
    },
    "outputs": [
@@ -98,7 +98,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_162/2158743488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mintegrate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# la fonction qu'on va intégrer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_211/2158743488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mintegrate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# la fonction qu'on va intégrer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
      ]
     }
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-23T20:35:27.503976Z",
-     "iopub.status.busy": "2021-11-23T20:35:27.500344Z",
-     "iopub.status.idle": "2021-11-23T20:35:27.506676Z",
-     "shell.execute_reply": "2021-11-23T20:35:27.506178Z"
+     "iopub.execute_input": "2021-12-06T15:37:33.214883Z",
+     "iopub.status.busy": "2021-12-06T15:37:33.213192Z",
+     "iopub.status.idle": "2021-12-06T15:37:33.219653Z",
+     "shell.execute_reply": "2021-12-06T15:37:33.220341Z"
     }
    },
    "outputs": [
@@ -159,7 +159,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_162/2521968441.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgaussienne\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgaussienne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# renvoie moyenne et variance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_211/2521968441.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgaussienne\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgaussienne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# renvoie moyenne et variance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
      ]
     }
@@ -186,7 +186,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Réécrire des fonctions `moyenne` et `variance` (comme dans le DS, sans utiliser scipy) pour calculer la moyenne et la variance d'une liste de nombres."
+    "**Exercice** : Réécrire des fonctions `moyenne` et `variance` pour calculer la moyenne et la variance d'une liste de nombres."
    ]
   },
   {
@@ -206,7 +206,7 @@
     ]
    },
    "source": [
-    "1. Importer `sympy` avec `from sympy import *`.\n",
+    "1. Importer `sympy`.\n",
     "2. Écrire `from sympy.abc import x, y`. Ceci permet ensuite d'utiliser `x` et `y` comme variables indéterminées."
    ]
   },
