--- a/files/2_tp_semestre1/4_dichotomie.ipynb
+++ b/files/2_tp_semestre1/4_dichotomie.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Recherche par dichotomie ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F4_dichotomie.ipynb%26branch%3Dmaster)\n",
+    "# [TP 4 : Recherche par dichotomie ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F4_dichotomie.ipynb%26branch%3Dmaster)\n",
     "\n",
     "## Retour sur la recherche linéaire"
    ]
@@ -167,10 +167,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-29T15:38:50.087665Z",
-     "iopub.status.busy": "2021-11-29T15:38:50.087119Z",
-     "iopub.status.idle": "2021-11-29T15:38:50.099359Z",
-     "shell.execute_reply": "2021-11-29T15:38:50.098813Z"
+     "iopub.execute_input": "2021-12-06T15:37:35.679585Z",
+     "iopub.status.busy": "2021-12-06T15:37:35.678929Z",
+     "iopub.status.idle": "2021-12-06T15:37:35.691101Z",
+     "shell.execute_reply": "2021-12-06T15:37:35.691566Z"
     }
    },
    "outputs": [],
